objects/BRPSalesSettings__c.object
<CustomObject>
    <fields>
        <fullName>HsFormurl__c</fullName>
        <label>HsFormurl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office_Name__c</fullName>
        <label>Sales Office Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharingType__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SharingType</label>
        <type>Checkbox</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>BRP Sales Settings</label>
</CustomObject>